# Claw_Launcher_Linux_App_Rust

./: .README.md.kate-swp  .gitignore  CLAUDE.md  ENTREGA_VISUAL.txt  GEMINI.md  GITHUB_COPILOT.md  LICENSE  QUICKSTART.md  README.md  build.sh  cleanup-git.sh  create_app.sh  install.sh  main.py  purg_app.py  pyproject.toml  setup-deps.sh
ICON/: Links.txt
instance_Claw_OneNote/: Claw_OneNote.desktop  instance.conf
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cli.rs  index.html  main.rs  profile.rs  window.rs
