[package]
name = "claw-launcher"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"

[dependencies]
tauri = { version = ">=2.1", features = ["rustls-tls", "webkit2gtk"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
url = "2"
base64 = "0.22"

[build-dependencies]
tauri-build = "2"

[profile.release]
opt-level = 3
lto = true
strip = true